# spiffe-helper-rust

./: .dockerignore  .gitignore  .pr160_update.md  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLIPPY_FINDINGS.md  Cargo.toml  Dockerfile  Dockerfile.debug  IMPLEMENTATION_PLAN.md  ISSUE-UPDATES-README.md  LICENSE  Makefile  PLAN-ISSUE-9.md  README.md  clippy.toml  issue-41-update.md  issue-42-update.md  issue-44-update.md  issue-45-update.md  issue-46-update.md  issue-48-update.md  kind-config.yaml  post-issue-updates.sh  pr-82-improvements.patch
.claude/: settings.json
.claude/hooks/: check-rust-version.sh
.github/workflows/: ci.yml  smoke-test.yml
deploy/httpbin/: httpbin.yaml
deploy/spire/agent/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset.yaml  namespace.yaml  serviceaccount.yaml
deploy/spire/csi/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  csidriver.yaml  daemonset.yaml  example-pod.yaml  namespace.yaml  serviceaccount.yaml
deploy/spire/registration/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  namespace.yaml  serviceaccount.yaml
deploy/test-daemon/: Dockerfile  deployment.yaml  helper.conf  test-daemon.yaml
docs/: STYLE_GUIDE.md  certificate_rotation_tests.md  dockerfile-testing.md  feature_gap_review.md  integration_test.md
docs/problems/: 001-mock-spire-agent.md
docs/prompts/: pr-create.md  toc.md
examples/: README.md
scripts/: check-spire-server.sh  cluster-up.sh  colors.sh  deploy-httpbin.sh  deploy-registration.sh  deploy-spire-agent.sh  deploy-spire-csi.sh  deploy-spire-server.sh  generate-certs.sh  install-tools.sh  smoke-test.sh  start-mock-agent.sh  test-daemon-x509.sh  test-daemon.sh  test-dockerfile.sh  test-oneshot-x509.sh  test-signal-handling.sh  undeploy-httpbin.sh  undeploy-registration.sh  undeploy-spire-agent.sh  undeploy-spire-csi.sh  undeploy-spire-server.sh  validate-dockerfile.sh
scripts/agent/: create-pr.sh
scripts/httpbin/: deploy.sh  undeploy.sh
scripts/registration/: deploy.sh  undeploy.sh
scripts/spire-agent/: deploy.sh  undeploy.sh
scripts/spire-csi/: deploy.sh  undeploy.sh
scripts/spire-server/: deploy.sh  undeploy.sh
scripts/test/: smoke-test.sh  test-daemon-x509.sh  test-daemon.sh  test-managed-process.sh  test-oneshot-x509.sh  test-pid-file.sh
spiffe-helper/: Cargo.toml  Dockerfile
spiffe-helper/examples/: README.md  managed_process.conf  pid_file.conf  simple.conf
spiffe-helper/src/: daemon.rs  lib.rs  main.rs  oneshot.rs  process.rs  signal.rs  svid.rs  workload_api.rs
spiffe-helper/src/cli/: args.rs  config.rs  health_check.rs  mod.rs
spiffe-helper/src/file_system/: mod.rs
spiffe-helper/src/health/: server.rs  status.rs
spiffe-helper/tests/: config_cmd_args_integration.rs  daemon_integration.rs  mock_integration.rs  oneshot_integration.rs  process_integration.rs
spiffe-helper/tests/common/: mod.rs
spire-agent-mock/: Cargo.toml  README.md
spire-agent-mock/scripts/: start.sh
spire-agent-mock/src/: main.rs  server.rs  svid.rs
spire-mock/: Cargo.toml
spire-mock/proto/: workload.proto
spire-mock/src/: main.rs
src/: cli.rs  config.rs  daemon.rs  health.rs  jwt.rs  lib.rs  main.rs  oneshot.rs  process.rs  signal.rs  svid.rs  workload_api.rs
src/cli/: args.rs  config.rs  health_check.rs  mod.rs
src/health/: mod.rs  server.rs  status.rs
tests/: config_cmd_args_integration.rs  process_integration.rs  workload_api_tests.rs
(+8 files in other folders)
