[package]
name = "spire-agent-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
spiffe = "0.10.2"
prost = "0.11"
prost-types = "0.11"
tempfile = "3.8"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
clap = { version = "4.4", features = ["derive", "env"] }
rcgen = { version = "0.13", features = ["pem"] }
time = "0.3"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.9"
