[package]
name = "spire-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
pem = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["trace"] }

[build-dependencies]
tonic-build = "0.9"
